fixed bug where delete playlist button where visible

--- a/_app/css/modules/context-menu.css
+++ b/_app/css/modules/context-menu.css
@@ -17,10 +17,6 @@
 
 .context-menu__playlist-section--visible,
 .context-menu__release-section--visible {
-	display: block;
-}
-
-.context-menu__playlist-section {
 	display: flex;
 	flex-direction: column;
 }
